syntax = "proto3";
package tac.node.grpc;
option java_package = "com.tacplatform.api.grpc";
option csharp_namespace = "Tac.Node.Grpc";
option go_package = "github.com/tacplatform/gotac/pkg/grpc/generated/tac/node/grpc";

import "tac/transaction.proto";
import "tac/node/grpc/accounts_api.proto";

service AssetsApi {
    rpc GetInfo (AssetRequest) returns (AssetInfoResponse);
    rpc GetNFTList (NFTRequest) returns (stream NFTResponse);
}

message AssetRequest {
    bytes asset_id = 1;
}

message NFTRequest {
    bytes address = 1;
    int32 limit = 2;
    bytes after_asset_id = 3;
}

message NFTResponse {
    bytes asset_id = 1;
    AssetInfoResponse asset_info = 2;
}

message AssetInfoResponse {
    bytes issuer = 1;
    string name = 2;
    string description = 3;
    int32 decimals = 4;
    bool reissuable = 5;
    int64 total_volume = 6;
    ScriptData script = 7;
    int64 sponsorship = 8;
    SignedTransaction issue_transaction = 11;
    int64 sponsor_balance = 10;
}
